# save_my_money_tg_bot

./: README.org  main.py  pyproject.toml
src/: bot.py  db.py  models.py  settings.py
